Bug 1181560 - ensure previous menus get closed when opening new ones, r=Enn, a=sylvestre

--HG--
extra : source : 58a514b9e26e5af579ce4544544bb949a62cda35